# VibeGuard

./: .gitignore  .pre-commit-hooks.yaml  2026 오픈소스 개발자대회 결과보고서_파비스.docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VibeGuard-GUI.bat  VibeGuard-GUI.command  pyproject.toml
.github/workflows/: release.yml  vibeguard.yml
demo/: demo.html
examples/: README.md
examples/vibe_coded_app/: app.py  package.json  requirements.txt  server.js
packaging/: generate_icon.py  generate_screenshot.py  vibeguard_app.py
tests/: test_astscan.py  test_baseline.py  test_config.py  test_cve.py  test_diff.py  test_html.py  test_lang_rules.py  test_lang_rules2.py  test_more_rules.py  test_new_rules.py  test_rules.py  test_sarif.py  test_scanner_and_score.py  test_server.py  test_slopsquat.py
vibeguard/: __init__.py  __main__.py  astscan.py  baseline.py  cli.py  config.py  cve.py  finding.py  gitdiff.py  reporter.py  scanner.py  score.py  server.py  slopsquat.py
vibeguard/hooks/: __init__.py
vibeguard/rules/: __init__.py  base.py  crypto.py  dangerous.py  golang.py  injection.py  java.py  php.py  ruby.py  secrets.py  web.py
보고서/: VibeGuard_개발계획서.txt  시연영상_대본.md  제출_가이드.md
